--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,46 @@
 </head>
 
 <body>
-    
+    <div>
+        <h1>You Want It Darker</h1>
+        <h2>Leonard Cohen</h2>
+        <p>If you are the dealer<br>
+        I'm out of the game<br>
+        If you are the healer it means<br>
+        I'm broken and lame<br>
+        If thine is the glory then<br>
+        Mine must be the shame<br>
+        You want it darker<br>
+        We kill the flame</p>
+        <p>Magnified, sanctified<br>
+        Be the holy name<br>
+        Feel the fire, crucified<br>
+        In the human frame<br>
+        A million candles burning<br>
+        For the help that never came<br>
+        You want it darker</p>
+        <p>Hineni, hineni<br>
+        I'm ready, My Lord</p>
+        <p>There's a lover in the story<br>
+        But the story's still the same<br>
+        There's a lullaby for suffering<br>
+        And a paradox to blame<br>
+        But it's written in the scriptures<br>
+        And it's not some idol claim<br>
+        You want it darker<br>
+        We killed the flame</p>
+        <p>You're lining up to prisoners<br>
+        And the guards are taking him<br>
+        I struggle with some demons<br>
+        They were middle class and dean<br>
+        I didn't know I had permission<br>
+        To murder and to mend<br>
+        You want it darker</p>
+        <p>Hineni, hineni<br>
+        I'm ready, My Lord</p>
+        <p><span>Source: Musixmatch<br>
+        Songwriters: Leonard Cohen / Patrick Leonard<br>
+        You Want It Darker lyrics © Old Ideas Llc, No Tomato Music</span></p>
+    </div>
 </body>
 </html>
