Add style for page

--- a/index.html
+++ b/index.html
@@ -4,50 +4,54 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My song</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Slabo+27px&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div>
-        <h1>You Want It Darker</h1>
-        <h2>Leonard Cohen</h2>
-        <p>If you are the dealer<br>
-        I'm out of the game<br>
-        If you are the healer it means<br>
-        I'm broken and lame<br>
-        If thine is the glory then<br>
-        Mine must be the shame<br>
-        You want it darker<br>
-        We kill the flame</p>
-        <p>Magnified, sanctified<br>
-        Be the holy name<br>
-        Feel the fire, crucified<br>
-        In the human frame<br>
-        A million candles burning<br>
-        For the help that never came<br>
-        You want it darker</p>
-        <p>Hineni, hineni<br>
-        I'm ready, My Lord</p>
-        <p>There's a lover in the story<br>
-        But the story's still the same<br>
-        There's a lullaby for suffering<br>
-        And a paradox to blame<br>
-        But it's written in the scriptures<br>
-        And it's not some idol claim<br>
-        You want it darker<br>
-        We killed the flame</p>
-        <p>You're lining up to prisoners<br>
-        And the guards are taking him<br>
-        I struggle with some demons<br>
-        They were middle class and dean<br>
-        I didn't know I had permission<br>
-        To murder and to mend<br>
-        You want it darker</p>
-        <p>Hineni, hineni<br>
-        I'm ready, My Lord</p>
-        <p><span>Source: Musixmatch<br>
-        Songwriters: Leonard Cohen / Patrick Leonard<br>
-        You Want It Darker lyrics © Old Ideas Llc, No Tomato Music</span></p>
+    <div class="section">
+        <div class="container">
+            <h1>You Want It Darker</h1>
+            <h2>Leonard Cohen</h2>
+            <p>If you are the dealer<br>
+            I'm out of the game<br>
+            If you are the healer it means<br>
+            I'm broken and lame<br>
+            If thine is the glory then<br>
+            Mine must be the shame<br>
+            You want it darker<br>
+            We kill the flame</p>
+            <p>Magnified, sanctified<br>
+            Be the holy name<br>
+            Feel the fire, crucified<br>
+            In the human frame<br>
+            A million candles burning<br>
+            For the help that never came<br>
+            You want it darker</p>
+            <p>Hineni, hineni<br>
+            I'm ready, My Lord</p>
+            <p>There's a lover in the story<br>
+            But the story's still the same<br>
+            There's a lullaby for suffering<br>
+            And a paradox to blame<br>
+            But it's written in the scriptures<br>
+            And it's not some idol claim<br>
+            You want it darker<br>
+            We killed the flame</p>
+            <p>You're lining up to prisoners<br>
+            And the guards are taking him<br>
+            I struggle with some demons<br>
+            They were middle class and dean<br>
+            I didn't know I had permission<br>
+            To murder and to mend<br>
+            You want it darker</p>
+            <p>Hineni, hineni<br>
+            I'm ready, My Lord</p>
+            <p><small>Source: Musixmatch<br>
+            Songwriters: Leonard Cohen / Patrick Leonard<br>
+            You Want It Darker lyrics © Old Ideas Llc, No Tomato Music</small></p>
+        </div>
     </div>
 </body>
 </html>
