--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             Songwriters: Leonard Cohen / Patrick Leonard<br>
             You Want It Darker lyrics © Old Ideas Llc, No Tomato Music</small></p>
         </div>
-        <iframe width="1000" height="315" src="https://www.youtube.com/embed/XQOpeJ8YHrE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="1000" height="315" src="https://www.youtube.com/embed/XQOpeJ8YHrE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen title="coen you want it darker"></iframe>
     </div>
 </body>
 </html>
