Update content of index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <h1>You Want It Darker</h1>
             <h1>Yes, I Want It Darker:p</h1>
-            <h2>Leonard Cohen</h2>
+            <h2>Leonard Cohen - super guy</h2>
             <p>If you are the dealer<br>
             I'm out of the game<br>
             If you are the healer it means<br>
