--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="body">
     <div class="section">
         <div class="container">
             <h1>You Want It Darker</h1>
-            <h1>Yes, I Want It Darker:p</h1>
+            <h1 class="abc">Yes, I Want It Darker:p</h1>
             <h2>Leonard Cohen</h2>
             <p>If you are the dealer<br>
             I'm out of the game<br>
