--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My favourite song</title>
+    <title>My Kasia favourite song</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Slabo+27px&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -56,5 +56,6 @@
         </div>
         <iframe width="1000" height="315" src="https://www.youtube.com/embed/XQOpeJ8YHrE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen title="coen you want it darker"></iframe>
     </div>
+    <p>Kasia</p>
 </body>
 </html>
